5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4065/executions/1578_2896.log
== TEST (2019-03-12 16:33:34) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = igor

# Impressao de saidas
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = igor
NameError: name 'igor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 16:34:24) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = igor

# Impressao de saidas
print(igor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = igor
NameError: name 'igor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 16:36:07) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("igor")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 16:36:11) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("igor")

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.21577
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:14:47) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("igor")

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.146817
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:19:52) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("igor")

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.163331
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:23:43) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("igor")

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.182523
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 13:46:49) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("igor")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 13:48:36) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome: ")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 13:48:45) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome: ")

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.151757
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 12:15:27) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome: ")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 12:15:40) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome: ")

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.14231
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 12:17:32) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome: ")

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.133534
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 12:17:37) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome: ")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 12:17:47) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome: ")

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.133765
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
